examples/test/testpolicy18573.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18573
  namespace: namespace355
spec:
  podSelector:
    matchLabels:
      key45: value17
      key18: value27
      key25: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value19
          key0: value27
      podSelector:
        matchLabels:
          key24: value9
          key34: value15
